add .dockerignore add function to avoid race condition while setting in Redis via ioRedisConfig.ts
