# src/routes/scoreController.ts
@@ -2,13 +2,14 @@ import express, { Request, Response, NextFunction } from 'express';
 import ScoreManagerService from '../service/scoreManagerService';
 
 const router = express.Router();
+const scoreManagerService = new ScoreManagerService();
 
 /* GET Redis Test Page */
 router.get('/redis/:key', async (req: Request, res: Response, next: NextFunction) => {
 
     const key = req.params.key;
-    const scoreManagerService = new ScoreManagerService();
     const value = await scoreManagerService.getScore(key);
+
     if(value){
         res.status(200).json({[key] : value});
     }else{
@@ -26,10 +27,10 @@ router.post('/redis/:key', (req: Request, res: Response, next: NextFunction) => 
 
     const key = req.params.key;
     const body = JSON.stringify(req.body);
-    const scoreManagerService = new ScoreManagerService();    
+
     scoreManagerService.setScore(key, body);
 
-    res.status(201);
+    res.status(201).send();
     /*  #swagger.parameters['body'] = {
         in: 'body',
         description: 'Some description...'
@@ -41,11 +42,43 @@ router.post('/redis/:key', (req: Request, res: Response, next: NextFunction) => 
     */
 });
 
+router.post('/redis/:key/lock', (req: Request, res: Response, next: NextFunction) => {
+
+    const key = req.params.key;
+    const body = JSON.stringify(req.body);
+
+    scoreManagerService.setScore(key, body);
+    console.log('POST /redis/:key');
+    res.status(201).send();
+    /*  #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Some description...'
+
+        }
+        #swagger.security = [{
+        "basicAuth": []
+        }]
+    */
+});
+
+router.delete('/redis/:key', (req: Request, res: Response, next: NextFunction) => {
+
+    const key = req.params.key;    
+    
+    scoreManagerService.removeScore(key);
+
+    res.status(200).send();
+    /*
+        #swagger.security = [{
+        "basicAuth": []
+        }]
+    */
+});
+
 /* GET Sqlite Test Page */
 router.get('/sqlite/:id', async (req: Request, res: Response, next: NextFunction) => {
 
     const id = req.params.id;
-    const scoreManagerService = new ScoreManagerService();
     const row =  await scoreManagerService.getScoreByGameId(id);
 
     res.status(200).json(row);
@@ -61,10 +94,9 @@ router.post('/sqlite/:id', async (req: Request, res: Response, next: NextFunctio
     const id = req.params.id;
     const body = JSON.stringify(req.body);
 
-    const scoreManagerService = new ScoreManagerService();
     scoreManagerService.saveScore(id, body);
 
-    res.status(201);
+    res.status(201).send();
     /*  #swagger.parameters['body'] = {
             in: 'body',
             description: 'Some description...'
